<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shmj.chatwd.MainActivity">

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SearchtButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_algo"
        android:onClick="search" />

    <LinearLayout

        android:id="@+id/linearLayout_algo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/listitem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchButton"  >

        <RadioGroup
            android:id="@+id/radioAlgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@android:dimen/app_icon_size">

            <RadioButton
                android:id="@+id/radioAES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aes"
                android:layout_marginRight="@android:dimen/app_icon_size"/>

            <RadioButton
                android:id="@+id/radioDES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des"
                android:layout_marginRight="@android:dimen/app_icon_size" />

            <RadioButton
                android:id="@+id/radioRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rsa" />

        </RadioGroup>

    </LinearLayout>


    <ListView
        android:id="@+id/listitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_algo" />



</android.support.constraint.ConstraintLayout>
