<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/otherDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_device_name"
        app:layout_constraintBottom_toTopOf="@id/encryptionAlgo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/encryptionAlgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/otherDeviceName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout_key"
        android:text="@string/encryption_algorithm"/>




    <RelativeLayout
        android:id="@+id/relativeLayout_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encryptionAlgo"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout_msg"  >


        <TextView
            android:id="@+id/myKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/key" />

        <TextView
            android:id="@+id/opponentKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/myKey"
            android:layout_toLeftOf="@+id/sendKey"
            android:layout_toRightOf="@+id/myKey"
            android:layout_toStartOf="@+id/sendKey"
            android:text="@string/key" />


        <Button
            android:id="@+id/sendKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="sendKeyToOpponent"
            android:text="@string/send"
            android:visibility="invisible" />

    </RelativeLayout>


    <LinearLayout

        android:id="@+id/linearLayout_msg"
        android:layout_width="fill_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout_key">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/decrypt_messages"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/encrypt_messages"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_msg"
        app:layout_constraintBottom_toBottomOf="parent"  >

        <EditText
            android:id="@+id/textToSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:cursorVisible="true"
            android:hint="@string/write_here" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="sendButton"
            android:text="@string/send" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>